# cpp_3d_jump

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Grid.cpp  Makefile  Menu.cpp  Menu.h  Obstacle.cpp  Obstacle.h  Projectile.h  README.md  UserInput.cpp  UserInput.h  build_packages.sh  cmake_install.cmake  compile_commands.json  leaderboard.py  main.cpp  processing3d  run.sh  windows_dev_setup.bat
.cache/clangd/index/: Grid.cpp.5A6FF51991D2B646.idx  Grid.h.69727819FF60BE35.idx  Menu.cpp.36FB6E1C4925B171.idx  Menu.h.92F5737AB77876C6.idx  Obstacle.cpp.7917598A1767DB52.idx  Obstacle.h.E45C1D436A66C9B0.idx  Projectile.cpp.42F5D84C511106D2.idx  Projectile.h.EB5785EE43D342A7.idx  UserInput.cpp.5C72E868CA3B29BA.idx  UserInput.h.32C1773B7FCEB037.idx  main.cpp.59B6FC9DFD18A9A3.idx  miniaudio.h.CA1F1472B9AB5253.idx
.github/workflows/: build.yml
docs/: 01_project_overview.md  02_cpp_fundamentals.md  03_opengl_basics.md  04_game_architecture.md  05_player_physics.md  06_3d_rendering.md  07_menu_system.md  08_settings_file_io.md  09_audio_system.md  10_collision_system.md  11_build_system.md  12_future_improvements.md  README.md
src/: Grid.cpp  Grid.h  Obstacle.cpp  Obstacle.h  Projectile.cpp  UserInput.cpp  UserInput.h  main.cpp
src/menus/: Leaderboard.cpp  Leaderboard.h  Menu.cpp  Menu.h  MenuAudio.cpp  MenuAudio.h  MenuInput.cpp  MenuRender.cpp  Settings.cpp  Settings.h
